--- a/wuanlifeMobileV1.0.1/groups.html
+++ b/wuanlifeMobileV1.0.1/groups.html
@@ -2,7 +2,7 @@
 <html lang="zh-CN">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1,user-scalable=0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="robots" content="index,follow">
     <meta name="format-detection" content="telephone=no">
@@ -57,7 +57,7 @@
     <div class="container">
         <div class="row">
             <!-- main framework-->
-            <div class="col-md-8 col-md-offset-2">
+            <div class="col-md-8 col-md-offset-2 col-sm-8 col-sm-offset-2 ">
                 <section>
                     <div class="delete-float">
                         <h2 class="pull-left">全部星球</h2>
