--- a/wuanlifeMobileV1.0.3/groups.html
+++ b/wuanlifeMobileV1.0.3/groups.html
@@ -65,31 +65,31 @@
                     </div>
                     <ul class="list-unstyled top-ic  col-xs-12 col-sm-12">
 
-                        <li class="col-md-6 col-xs-12 col-sm-12">
-                            <a><img class="img-circle" ></a>
+                        <li class="col-md-6 col-xs-12 col-sm-12 ">
+                            <a><img class="img-thumbnail" src="image/logo-3x.png"></a>
                             <div>
-                                <a><p>我们都是技术宅</p></a>
+                                <a href=""><p>我们都是技术宅</p></a>
                                 <p>999 个成员</p>
                             </div>
-                            <button >加入 +</button>
+                            <a class="btn btn-primary">加入 +</a>
                         </li>
 
-                        <li class="col-md-6 col-xs-12 col-sm-12">
-                            <a><img class="img-circle" ></a>
+                        <li class="col-md-6 col-xs-12 col-sm-12 ">
+                            <a><img class="img-thumbnail" src="image/logo-3x.png"></a>
                             <div>
-                                <a><p>我们都是技术宅</p></a>
+                                <a href=""><p>我们都是技术宅</p></a>
                                 <p>999 个成员</p>
                             </div>
-                            <button >加入 +</button>
+                            <a class="btn btn-primary">加入 +</a>
                         </li>
 
-                        <li class="col-md-6 col-xs-12 col-sm-12">
-                            <a><img class="img-circle" ></a>
+                        <li class="col-md-6 col-xs-12 col-sm-12 ">
+                            <a><img class="img-thumbnail" src="image/logo-3x.png"></a>
                             <div>
-                                <a><p>我们都是技术宅</p></a>
+                                <a href=""><p>我们都是技术宅</p></a>
                                 <p>999 个成员</p>
                             </div>
-                            <button >加入 +</button>
+                            <a class="btn btn-primary">加入 +</a>
                         </li>
 
                     </ul>
@@ -102,12 +102,16 @@
 </div>
 <!-- file="page.html"-->
 <!-- page-->
-<div class="container page-nav hidden-md hidden-lg">
-    <ul class="list-unstyled list-inline">
-        <li><a href="">上一页</a></li>
-        <li> 29 / 210</li>
-        <li><a href="">下一页</a></li>
-    </ul>
+<div class="container page-nav ">
+    <div class="row">
+        <div class="col-md-8 col-md-offset-2">
+            <ul class="list-unstyled list-inline ">
+                <li><a href="">上一页</a></li>
+                <li> 29 / 210</li>
+                <li><a href="">下一页</a></li>
+            </ul>
+        </div>
+    </div>
 </div>
 <!-- file="foot.html"-->
 <!-- foot -->
