--- a/wuanlifeMobileV1.0.3/page.html
+++ b/wuanlifeMobileV1.0.3/page.html
@@ -16,12 +16,16 @@
 
 <!-- file="page.html"-->
 <!-- page-->
-<div class="container page-nav hidden-md hidden-lg">
-    <ul class="list-unstyled list-inline">
-        <li><a href="">上一页</a></li>
-        <li> 29 / 210</li>
-        <li><a href="">下一页</a></li>
-    </ul>
+<div class="container page-nav ">
+    <div class="row">
+        <div class="col-md-8 col-md-offset-2">
+            <ul class="list-unstyled list-inline ">
+                <li><a href="">上一页</a></li>
+                <li> 29 / 210</li>
+                <li><a href="">下一页</a></li>
+            </ul>
+        </div>
+    </div>
 </div>
 
 
