--- a/wuanlifeMobileV1.0.3/index.html
+++ b/wuanlifeMobileV1.0.3/index.html
@@ -8,7 +8,7 @@
     <meta name="format-detection" content="telephone=no">
     <meta name="format-detection" content="email=no">
     <meta name="format-detection" content="adress=no">
-    <title>鬼扯天地 - 午安网 - 过你想过的生活</title>
+    <title>主页 - 午安网 - 过你想过的生活</title>
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/wuan.css">
 </head>
@@ -60,16 +60,21 @@
             <div class="col-md-8 col-md-offset-2">
                 <section>
                     <div class="delete-float">
-                        <h2 class="pull-left">鬼扯天地</h2>
-                        <a class="pull-right btn btn-warning">加入</a>
+                        <h2 class="pull-left">发现</h2>
                     </div>
+                    <!-- 请判断帖子是否存在图片需要展示，判断后决定输出的模板 第一个是有图 第二个是无图-->
                     <article>
                         <h3><a href="">卧槽！谁来告诉我我这是眼袋还是卧蚕！我才知道我笑起来那么吓人</a></h3>
-                        <div>
+                        <div class="delete-float">
+                            <div class="pull-left container-content" >
                             <p>昨天拍了个照片也没太注意。。发给朋友看他们说你最近眼袋怎么那么重！
                                 然而露珠平时好像是没有眼袋的啊！
                                 百度了一下说卧蚕什么紧贴下睫毛啊细细一条啊但是露珠的好像并不细。。。哭 大...
                             </p>
+                            </div>
+                            <div class="pull-right container-img">
+                                <img  src="image/logo-1x.png">
+                            </div>
                         </div>
                         <footer class="footer">
                             <span class="pull-left"><a href="">陶陶</a> 发表于 <a href="">鬼扯天地</a></span>
@@ -79,11 +84,14 @@
 
                     <article>
                         <h3><a href="">卧槽！谁来告诉我我这是眼袋还是卧蚕！我才知道我笑起来那么吓人</a></h3>
-                        <div>
-                            <p>昨天拍了个照片也没太注意。。发给朋友看他们说你最近眼袋怎么那么重！
-                                然而露珠平时好像是没有眼袋的啊！
-                                百度了一下说卧蚕什么紧贴下睫毛啊细细一条啊但是露珠的好像并不细。。。哭 大...
-                            </p>
+                        <div class="delete-float">
+                            <div>
+                                <p>昨天拍了个照片也没太注意。。发给朋友看他们说你最近眼袋怎么那么重！
+                                    然而露珠平时好像是没有眼袋的啊！
+                                    百度了一下说卧蚕什么紧贴下睫毛啊细细一条啊但是露珠的好像并不细。。。哭 大...
+                                </p>
+                            </div>
+
                         </div>
                         <footer class="footer">
                             <span class="pull-left"><a href="">陶陶</a> 发表于 <a href="">鬼扯天地</a></span>
@@ -93,11 +101,16 @@
 
                     <article>
                         <h3><a href="">卧槽！谁来告诉我我这是眼袋还是卧蚕！我才知道我笑起来那么吓人</a></h3>
-                        <div>
-                            <p>昨天拍了个照片也没太注意。。发给朋友看他们说你最近眼袋怎么那么重！
-                                然而露珠平时好像是没有眼袋的啊！
-                                百度了一下说卧蚕什么紧贴下睫毛啊细细一条啊但是露珠的好像并不细。。。哭 大...
-                            </p>
+                        <div class="delete-float">
+                            <div class="pull-left container-content" >
+                                <p>昨天拍了个照片也没太注意。。发给朋友看他们说你最近眼袋怎么那么重！
+                                    然而露珠平时好像是没有眼袋的啊！
+                                    百度了一下说卧蚕什么紧贴下睫毛啊细细一条啊但是露珠的好像并不细。。。哭 大...
+                                </p>
+                            </div>
+                            <div class="pull-right container-img">
+                                <img  src="image/logo-3x.png">
+                            </div>
                         </div>
                         <footer class="footer">
                             <span class="pull-left"><a href="">陶陶</a> 发表于 <a href="">鬼扯天地</a></span>
@@ -113,12 +126,16 @@
 </div>
 <!-- file="page.html"-->
 <!-- page-->
-<div class="container page-nav hidden-md hidden-lg">
-    <ul class="list-unstyled list-inline">
-        <li><a href="">上一页</a></li>
-        <li> 29 / 210</li>
-        <li><a href="">下一页</a></li>
-    </ul>
+<div class="container page-nav ">
+    <div class="row">
+        <div class="col-md-8 col-md-offset-2">
+            <ul class="list-unstyled list-inline ">
+                <li><a href="">上一页</a></li>
+                <li> 29 / 210</li>
+                <li><a href="">下一页</a></li>
+            </ul>
+        </div>
+    </div>
 </div>
 <!-- file="foot.html"-->
 <!-- foot -->
