--- a/wuanlifeMobileV1.0.3/posts.html
+++ b/wuanlifeMobileV1.0.3/posts.html
@@ -8,7 +8,7 @@
     <meta name="format-detection" content="telephone=no">
     <meta name="format-detection" content="email=no">
     <meta name="format-detection" content="adress=no">
-    <title>鬼扯天地 - 午安网 - 过你想过的生活</title>
+    <title>主页 - 午安网 - 过你想过的生活</title>
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/wuan.css">
 </head>
@@ -59,70 +59,75 @@
             <!-- main framework-->
             <div class="col-md-8 col-md-offset-2">
                 <section>
-                    <div class="delete-float">
-                        <h2 class="pull-left">鬼扯天地</h2>
-                        <a href="createPosts.html" class="pull-right btn btn-primary">发帖</a>
-                    </div>
-
                     <article>
-                        <h3><a href="">卧槽！谁来告诉我我这是眼袋还是卧蚕！我才知道我笑起来那么吓人</a></h3>
+                        <h3>卧槽！谁来告诉我我这是眼袋还是卧蚕！我才知道我笑起来那么吓人</h3>
+                        <footer class="footer">
+                            <span class="pull-left"><a href="">陶陶</a> 发表于 <a href="">鬼扯天地</a></span>
+                            <span class="pull-right">2015-12-26 22:00</span>
+                        </footer>
                         <div>
                             <p>昨天拍了个照片也没太注意。。发给朋友看他们说你最近眼袋怎么那么重！
                                 然而露珠平时好像是没有眼袋的啊！
                                 百度了一下说卧蚕什么紧贴下睫毛啊细细一条啊但是露珠的好像并不细。。。哭 大...
                             </p>
                         </div>
-                        <footer class="footer">
-                            <span class="pull-left"><a href="">陶陶</a> 发表于 <a href="">鬼扯天地</a></span>
-                            <span class="pull-right">2015-12-26 22:00</span>
-                        </footer>
+
+
+                        <!-- reply list-->
+                        <!--  -->
+                        <section class="reply-list">
+                            <div>
+
+                                <footer class="footer">
+                                    <span class="pull-left"><a href="">陶陶</a></span>
+                                    <span class="pull-right">2015-12-26 22:00</span>
+                                </footer>
+                                <div>
+                                     <p>
+                                         我追过清风，喝过烈酒，唱过悲歌，爱过你。
+                                      </p>
+                                </div>
+                            </div>
+
+                            <div>
+
+                                <footer class="footer">
+                                    <span class="pull-left"><a href="">陶陶</a></span>
+                                    <span class="pull-right">2015-12-26 22:00</span>
+                                </footer>
+                                <div>
+                                    <p>
+                                        我追过清风，喝过烈酒，唱过悲歌，爱过你。
+                                    </p>
+                                </div>
+                            </div>
+                        </section>
+
+                        <form action="" method="get" class="form-group">
+                            <textarea class="form-control" placeholder="输入回复内容" rows="4">
+                            </textarea>
+                            <button type="submit" class="pull-right btn btn-primary">回复</button>
+                        </form>
+
                     </article>
-
-                    <article>
-                        <h3><a href="">卧槽！谁来告诉我我这是眼袋还是卧蚕！我才知道我笑起来那么吓人</a></h3>
-                        <div>
-                            <p>昨天拍了个照片也没太注意。。发给朋友看他们说你最近眼袋怎么那么重！
-                                然而露珠平时好像是没有眼袋的啊！
-                                百度了一下说卧蚕什么紧贴下睫毛啊细细一条啊但是露珠的好像并不细。。。哭 大...
-                            </p>
-                        </div>
-                        <footer class="footer">
-                            <span class="pull-left"><a href="">陶陶</a> 发表于 <a href="">鬼扯天地</a></span>
-                            <span class="pull-right">2015-12-26 22:00</span>
-                        </footer>
-                    </article>
-
-                    <article>
-                        <h3><a href="">卧槽！谁来告诉我我这是眼袋还是卧蚕！我才知道我笑起来那么吓人</a></h3>
-                        <div>
-                            <p>昨天拍了个照片也没太注意。。发给朋友看他们说你最近眼袋怎么那么重！
-                                然而露珠平时好像是没有眼袋的啊！
-                                百度了一下说卧蚕什么紧贴下睫毛啊细细一条啊但是露珠的好像并不细。。。哭 大...
-                            </p>
-                        </div>
-                        <footer class="footer">
-                            <span class="pull-left"><a href="">陶陶</a> 发表于 <a href="">鬼扯天地</a></span>
-                            <span class="pull-right">2015-12-26 22:00</span>
-                        </footer>
-                    </article>
-
-
-
-
                 </section>
-            </div>
+</div>
 
-        </div>
-    </div>
+</div>
+</div>
 </div>
 <!-- file="page.html"-->
 <!-- page-->
-<div class="container page-nav hidden-md hidden-lg">
-    <ul class="list-unstyled list-inline">
-        <li><a href="">上一页</a></li>
-        <li> 29 / 210</li>
-        <li><a href="">下一页</a></li>
-    </ul>
+<div class="container page-nav ">
+    <div class="row">
+        <div class="col-md-8 col-md-offset-2">
+            <ul class="list-unstyled list-inline ">
+                <li><a href="">上一页</a></li>
+                <li> 29 / 210</li>
+                <li><a href="">下一页</a></li>
+            </ul>
+        </div>
+    </div>
 </div>
 <!-- file="foot.html"-->
 <!-- foot -->
