--- a/wuanlifeMobile/rePassword.html
+++ b/wuanlifeMobile/rePassword.html
@@ -43,7 +43,7 @@
 <!-- framework-->
 <!-- content-->
 <div class="framework-content">
-    <div class="container">
+    <div class="container text-center">
         <div class="text-center">
             <h3>找回密码</h3>
         </div>
