--- a/wuanlifeMobile/createPosts.html
+++ b/wuanlifeMobile/createPosts.html
@@ -16,7 +16,7 @@
 <!-- file="head.html"-->
 <!-- head start-->
 <div class="nav navbar navbar-fixed-top navbar-head-color navbar-head">
-    <div class="container">
+    <div class="container text-center">
         <div class="row">
             <div class="col-md-12">
                 <div class="navbar-brand navbar-header">
