--- a/wuanlifeMobile/reg.html
+++ b/wuanlifeMobile/reg.html
@@ -43,7 +43,7 @@
 <!-- framework-->
 <!-- content-->
 <div class="framework-content">
-    <div class="container ">
+    <div class="container text-center">
         <div class="text-center form-logo">
         </div>
         <form class="form-signin">
