--- a/wuanlifeMobile/page.html
+++ b/wuanlifeMobile/page.html
@@ -29,7 +29,7 @@
     </div>
 </div>
 <div class="container hidden-sm hidden-xs delete-float">
-    <nav class="pull-right">
+    <nav class="text-center">
         <ul class="pagination">
             <li>
                 <a href="#" aria-label="Previous">
