add css:form max none

--- a/wuanlifeMobile/posts.html
+++ b/wuanlifeMobile/posts.html
@@ -103,7 +103,7 @@
                             </div>
                         </section>
 
-                        <form action="" method="get" class="form-group">
+                        <form action="" method="get" class="form-group form-max-none">
                             <textarea class="form-control" placeholder="输入回复内容" rows="4">
                             </textarea>
                             <button type="submit" class="pull-right btn btn-primary">回复</button>
