--- a/wuanlifeMobile/rePassword.html
+++ b/wuanlifeMobile/rePassword.html
@@ -50,8 +50,7 @@
         <form class="form-signin">
             <label for="getEmail" class="sr-only">getEmail</label>
             <input type="text" id="getEmail" class="form-control" placeholder="邮箱：" required="" autofocus="">
-
-            <button class="btn form-control btn-primary" type="submit">发送邮件</button>
+            <button class="btn  btn-primary btn-block" type="submit">发送邮件</button>
         </form>
     </div>
 </div>
