--- a/wuanlifeMobile/login.html
+++ b/wuanlifeMobile/login.html
@@ -51,11 +51,9 @@
             <input type="text" id="userName" class="form-control" placeholder="昵称" required="" autofocus="">
             <label for="inputPassword" class="sr-only">Password</label>
             <input type="password" id="inputPassword" class="form-control" placeholder="密码" required="">
-
             <button class="btn btn-lg btn-primary btn-block" type="submit">登录</button>
-
-            <div class="footer">
-                <a class="pull-right" href="rePassword.html">找回密码</a>
+            <div class="footer ">
+                <a class="pull-right text-15" href="rePassword.html">找回密码</a>
             </div>
         </form>
 
