--- a/wuanlifeMobile/posts.html
+++ b/wuanlifeMobile/posts.html
@@ -104,8 +104,7 @@
                         </section>
 
                         <form action="" method="get" class="form-group form-max-none">
-                            <textarea class="form-control" placeholder="输入回复内容" rows="4">
-                            </textarea>
+                            <textarea class="form-control" placeholder="输入回复内容" rows="4"></textarea>
                             <button type="submit" class="pull-right btn btn-primary">回复</button>
                         </form>
 
