--- a/wuanlifeMobile/reg.html
+++ b/wuanlifeMobile/reg.html
@@ -55,7 +55,7 @@
             <input type="password" id="inputPassword" class="form-control" placeholder="密&#12288;码" required="">
             <label for="userEmail" class="sr-only">Email</label>
             <input type="email" id="userEmail" class="form-control" placeholder="邮&#12288;箱" required="">
-            <button class="btn btn-lg btn-primary btn-block" type="submit">注册</button>
+            <button class="btn btn-primary btn-block" type="submit">注册</button>
         </form>
 
     </div>
